--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
   <application
     android:name="com.mahaperivaya.Service.MyApplication"
     android:allowBackup="true"
-    android:icon="@drawable/perivaya1"
+    android:icon="@drawable/app_icon"
     android:label="@string/app_name"
     android:theme="@style/Theme.Demo">
 
