--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.mahaperivaya">
+  package="com.kanchi.periyava">
 
   <application
-    android:name="com.mahaperivaya.Service.MyApplication"
+    android:name=".Service.MyApplication"
     android:allowBackup="true"
     android:icon="@drawable/app_icon"
     android:label="@string/app_name"
