--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,12 @@ android {
 }
 
 dependencies {
-  compile 'com.android.support:appcompat-v7:22.2.0'
-  compile 'com.android.support:design:22.2.0'
-  compile 'com.android.support:cardview-v7:22.2.0'
-  compile 'com.android.support:recyclerview-v7:22.2.0'
+  compile 'com.android.support:appcompat-v7:22.2.1'
+  compile 'com.android.support:design:22.2.1'
+  compile 'com.android.support:cardview-v7:22.2.1'
+  compile 'com.android.support:recyclerview-v7:22.2.1'
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'com.mcxiaoke.volley:library:1.0.19'
   compile 'com.facebook.fresco:fresco:0.7.0'
+  compile 'com.android.support:support-v4:22.2.1'
 }
