--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
   <application
     android:name=".Service.MyApplication"
     android:allowBackup="true"
-    android:icon="@drawable/app_icon"
+    android:icon="@drawable/ic_appicon"
     android:label="@string/app_name"
     android:theme="@style/Theme.Demo">
 
@@ -18,6 +18,9 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+    <receiver
+      android:name=".Model.AlarmReceiver"
+      android:exported="false" />
   </application>
 
 
