1. Crash tool(fabric) integration. 2. Support for Lower version 4.1 and above. 3. Exo Player Integration Radio. 4. Feedback: Taking directly to the mail box when user click’s on feedback.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
     <receiver
       android:name=".Model.AlarmReceiver"
       android:exported="false" />
+    <meta-data
+      android:name="io.fabric.ApiKey"
+      android:value="179819484ea2577f5e3dc3a1bee0b5f32f3f5bc2" />
   </application>
 
 
