--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+  repositories {
+    maven { url 'https://maven.fabric.io/public' }
+  }
+
+  dependencies {
+    classpath 'io.fabric.tools:gradle:1.+'
+  }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+  maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
   compileSdkVersion 22
@@ -6,7 +21,7 @@ android {
 
   defaultConfig {
     applicationId 'com.kanchi.periyava'
-    minSdkVersion 18
+    minSdkVersion 16
     targetSdkVersion 22
     versionCode 1
     versionName "1.0"
@@ -71,4 +86,9 @@ dependencies {
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'com.mcxiaoke.volley:library:1.0.19'
   compile 'com.android.support:support-v4:22.2.1'
+  compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+    transitive = true;
+  }
+  compile fileTree(include: '*.jar', dir: 'libs')
+  compile 'org.bitbucket.yahor_makouski:exoplayer:1.0.13.10'
 }
