--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,12 @@ buildscript {
 
   dependencies {
     classpath 'io.fabric.tools:gradle:1.+'
+
   }
 }
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+
 
 repositories {
   maven { url 'https://maven.fabric.io/public' }
@@ -23,12 +25,11 @@ android {
     applicationId 'com.kanchi.periyava'
     minSdkVersion 16
     targetSdkVersion 22
-    versionCode 2
-    versionName "1.1"
+    versionCode 3
+    versionName "1.5"
     buildConfigField "long", "TIMESTAMP", System.currentTimeMillis() + "L"
   }
   signingConfigs {
-
     debug {
       storeFile file("./keystore/kanchisankara.keystore")
       storePassword "kanchisankara"
@@ -90,10 +91,10 @@ dependencies {
     transitive = true;
   }
   compile fileTree(include: '*.jar', dir: 'libs')
-  compile 'org.bitbucket.yahor_makouski:exoplayer:1.0.13.10'
   compile('com.crashlytics.sdk.android:crashlytics-ndk:1.1.2@aar') {
     transitive = true;
   }
+  compile project(':library-release')
 }
 
 crashlytics {
