--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
   <application
     android:name=".Service.MyApplication"
     android:allowBackup="true"
-    android:icon="@drawable/ic_appicon"
+    android:icon="@drawable/about_peetham"
     android:label="@string/app_name"
     android:theme="@style/Theme.Demo">
 
@@ -28,7 +28,6 @@
 
 
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-  <uses-permission android:name="android.permission.READ_PHONE_STATE" />
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
